package com.hk.opencoding.core.api.request;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/1 23:48
 */
public interface AiRequest {
}
