package com.hk.opencoding.core.api.response;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/2 16:14
 */
public interface AiStreamEvent {
}
