package com.hk.opencoding.core.api.response;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/2 22:11
 */
public interface ChatStreamEvent extends AiStreamEvent {
}
